# swiss-energy-forecast

./: .env.example  .gitignore  .vercelignore  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: refresh-forecast.yml  retrain.yml
api/: main.py
data/: entsoe.py  ingest.py  swissgrid.py  weather.py
features/: engineer.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: backtest.json  forecast.json
frontend/src/: App.jsx  theme.js
frontend/src/components/: BacktestReplay.jsx  CounterfactualPanel.jsx  CoverageTimeline.jsx  ForecastChart.jsx  GapChart.jsx  StatTiles.jsx
frontend/src/hooks/: useBacktest.js  useForecast.js
frontend/src/lib/: counterfactual.js
models/: conformal.py  export.py  registry.py  train.py  tune.py
models/artifacts/: demand_mw.txt  radii.json  solar_mw.txt  wind_mw.txt
scripts/: retrain_pipeline.py  static_backtest.py  static_forecast.py
storage/: db.py
tests/: test_api.py  test_conformal.py  test_export.py  test_features.py  test_registry_gate.py  test_retrain_pipeline.py  test_static_backtest.py
