[project]
name = "swiss-energy-forecast"
version = "0.1.0"
requires-python = "~=3.11"
dependencies = ["uvicorn[standard]"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]


[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
lightgbm = ">=4.3.0"
mapie = ">=0.8.0"
optuna = ">=3.6.0"
mlflow = ">=2.12.0"
fastapi = ">=0.111.0"
httpx = ">=0.27.0"
psycopg2-binary = ">=2.9.0"
pandas = ">=2.2.0"
numpy = ">=1.26.0"
scikit-learn = ">=1.4.0"
xmltodict = ">=0.13.0"
holidays = ">=0.46"
openpyxl = ">=3.1.0"
python-dotenv = ">=1.0.0"
pytest = ">=8.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
